# langchain-academy

./: pyproject.toml
module-0/: basics.ipynb
module-1/: chain.ipynb  simple-graph.ipynb
module-1/studio/: john_complete_tool_flow.ipynb
