[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-cli[inmem]>=0.4.7",
    "langgraph-prebuilt>=1.0.5",
    "langgraph-sdk>=0.2.10",
    "langsmith>=0.4.49",
    "notebook>=7.5.0",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
